<resources>
    <string name="app_name">Movie App</string>
    <string name="image_description">Image</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_home">Home</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_actor">Actors</string>

    <string name="title_activity_detail_home">DetailHomeActivity</string>
    <string name="no_data">Empty data</string>
    <string name="something_wrong">Oops.. something went wrong</string>

    <string name="title_favorite">Favorite</string>
    <string name="loremIpsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec consectetur diam eget volutpat porta. Sed dictum id mi in facilisis. Suspendisse vehicula convallis efficitur. Nunc imperdiet velit ut est hendrerit, vel cursus libero pellentesque. Sed varius vel orci in finibus. Etiam eu enim justo. Duis tempor ipsum in sem aliquam, id vestibulum odio imperdiet. Curabitur condimentum sem lacus, nec mattis diam pharetra nec. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; In ac erat at lorem mattis varius. Etiam eu risus metus.</string>
    <string name="release_date">Release Date</string>
    <string name="rating">Rating</string>
    <string name="original_language">Original Language</string>
    <string name="original_title">Original Title</string>
    <string name="popularity">Popularity</string>
    <string name="vote_count">Vote Count</string>
</resources>
